# Cranial_Implant_Design

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: FindBlosc.cmake  FindOpenVDB.cmake  FindZLIB.cmake
data/application/: intersection.ply
src/: CMakeLists.txt  Camera.hpp  ICP.h  Ray.hpp  Shader.hpp  SoA.cpp  SoA.hpp  Triangle.hpp  UISettings.hpp  Viewport.hpp  Window.cpp  Window.hpp  align.cpp  align.hpp  application.cpp  application.hpp  assert.hpp  cache.cpp  glfw_callbacks.cpp  glfw_callbacks.hpp  main.cpp  renderer.cpp  renderer.hpp  tinyply.hpp
src/descriptor/: GASDDescriptor.hpp
src/imgui/: CMakeLists.txt
src/logger/: CMakeLists.txt  ansi.hpp  logger.cpp  logger.hpp  logger_interface.hpp  stdout_logger.hpp
src/nrrd/: CMakeLists.txt
src/nrrd/NRRD/: nrrd.hxx  nrrd_image.hxx
src/opengl_object/: Line.hpp  Mesh.hpp  OpenGLObject.cpp  OpenGLObject.hpp  Point.hpp  Sphere.hpp
src/resource/: DescriptorResource.cpp  DescriptorResource.hpp  MeshResource.cpp  MeshResource.hpp  NrrdResource.cpp  NrrdResource.hpp  OpenvdbResource.cpp  OpenvdbResource.hpp  Resource.cpp  Resource.hpp  TransformResource.cpp  TransformResource.hpp
src/scene_object/: AreaPicker.hpp  IntersectionPointObject.hpp  LineObject.hpp  MeshObject.hpp  MeshObjectWithData.hpp  PointObject.hpp  SceneObject.hpp  SequenceLineObject.hpp  Skull.cpp  Skull.hpp  SphereObject.hpp
src/shaders/: color_frag.glsl  color_vert.glsl  debug_vert.glsl  diffuse_frag.glsl  diffuse_vert.glsl  flat_frag.glsl  flat_random_frag.glsl  flat_random_line_vert.glsl  flat_random_point_vert.glsl  flat_vert.glsl  grid_visualization_frag.glsl  grid_visualization_vert.glsl  intersectionpoint_frag.glsl  intersectionpoint_vert.glsl  skull_debug_frag.glsl  skull_debug_geo.glsl  skull_debug_vert.glsl  skull_frag.glsl  skull_vert.glsl  thresholded_voxel_visualization_frag.glsl  thresholded_voxel_visualization_vert.glsl
src/util/: CMakeLists.txt  util_color.hpp  util_mesh.hpp  util_opengl.cpp  util_opengl.hpp  util_openvdb.hpp  util_path.hpp  util_primitives.hpp  util_string.hpp  util_timer.hpp  util_ui.hpp
src/viewlayer/: CMakeLists.txt  grid_operator.cpp  grid_operator.hpp  grid_operator_border.cpp  grid_operator_border.hpp  grid_operator_filter.cpp  grid_operator_filter.hpp  grid_operator_level_set_filter.cpp  grid_operator_level_set_filter.hpp  grid_operator_segment_sdf.cpp  grid_operator_segment_sdf.hpp  viewlayer.cpp  viewlayer.hpp  viewlayer_align.cpp  viewlayer_cleanup.cpp  viewlayer_objects.cpp  viewlayer_vdb.cpp
